<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EncryptMessageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/phoneCountryCode_textLabel"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/phoneNumberInput_hint"
                android:inputType="phone" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="16dp"
            android:gravity="start"
            app:counterEnabled="true"
            app:counterMaxLength="150">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/messageContentEditText"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="start"
                android:gravity="start"
                android:hint="@string/encryptedMessages_message_textInput_hint"
                android:textAlignment="gravity"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/encryptionKeyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/encryptionKey_hint"
            android:inputType="textShortMessage"
            android:textSize="14sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:onClick="sendButtonClick"
            android:text="@string/sendButton_Label" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>